# python-async-grpc-template

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tox.ini
proto/app/: healthcheck.proto
proto/app/protobuf/healthcheck/: healthcheck.proto
scripts/: build_proto.sh
src/app/: __main__.py  __version__.py  grpc.py  registry.py  settings.py
src/app/conf/: __init__.py  global_settings.py
src/app/core/: grpc.py
src/app/core/handlers/: grpc.py
src/app/db/: __init__.py  engines.py  sessions.py
src/app/db/models/: __init__.py  base.py
src/app/interceptors/: __init__.py  logging.py
src/app/migrations/: env.py
src/app/processors/: __init__.py  healthcheck.py
src/app/repositories/: __init__.py  healthcheck.py
src/app/services/: __init__.py  healthcheck.py
src/app/utils/: timezone.py
